message runtime added to CMakeList

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -32,7 +32,7 @@ generate_messages(
    std_msgs
 )
  
-catkin_package(
+catkin_package(CATKIN_DEPENDS message_runtime
 #  INCLUDE_DIRS include LIBRARIES Rover donkey_rover 
 #  CATKIN_DEPENDS roscpp rospy std_msgs
 #  DEPENDS system_lib
